--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,11 +1,39 @@
 .page-section {
+
   @mixin atMedium {
     padding: 4.5rem 0;
   }
-  padding: 1.2rem 0;
-
+ 
   &--blue {
     background-color: $mainBlue;
     color: #fff;
+    
   }
+
+ 
+  &--testimonials {
+    background-color: #e0e0ef;
+    @mixin atLarge{
+      background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+      background-size: cover;
+    }
+  
+  }
+ 
+  &--no-b-pudding-until-medium {
+    padding-bottom: 0;
+
+    @mixin atMedium{
+      padding-bottom:  4.5rem;
+    }
+  }
+  &--no-b-pudding-until-large {
+    padding-bottom: 0;
+
+    @mixin atLarge{
+      padding-bottom:  4.5rem;
+    }
+  }
+  
+
 }
