--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,12 +1,19 @@
 .row {
   @mixin clearfix;
 
+  &--t-padding {
+    padding-top: 80px;
+  }
+
   &--gutters {
     margin-right: -65px;
   }
 
   &--gutters-large {
     margin-right: -100px;
+  }
+  &--gutters-small {
+    margin-right: -45px;
   }
 
   &--gutters > div {
@@ -15,10 +22,15 @@
   &--gutters-large > div {
     padding-right: 100px;
   }
+  &--gutters-small > div {
+    padding-right: 45px;
+  }
 
   &__b-margin-until-medium {
     margin-bottom: 1rem;
   }
+
+ 
 
   @mixin atMedium {
     &__b-margin-until-medium {
@@ -47,5 +59,63 @@
       float: left;
       width: 63%;
     }
+   
   }
+
+  
+  @mixin atLarge {
+    &__b-margin-until-large {
+      margin-bottom: 0;
+    }
+
+    &__large-4 {
+      float: left;
+      width: 33.33%;
+    }
+
+    &__large-4--larger {
+      width: 37%;
+    }
+
+    &__large-6 {
+      float: left;
+      width: 50%;
+    }
+
+    &__large-8 {
+      float: left;
+      width: 66.67%;
+    }
+    &__large-8--smaller {
+      float: left;
+      width: 63%;
+    }
+   
+  }
+
+
+  /* begin equal height rule*/
+  &--equal-height-at-medium {
+    @mixin atMedium{
+      display: flex;
+    }
+
+    & > div{
+      float: none;
+      display: flex;
+    }
+  }
+
+  &--equal-height-at-large {
+    @mixin atLarge{
+      display: flex;
+    }
+
+    & > div{
+      float: none;
+      display: flex;
+    }
+  }
+
+
 }
