--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -17,10 +17,15 @@
     margin-right: auto;
     margin-bottom: 0.6rem;
     @mixin atSmall {
+      position: relative;
+      top: 8px;
       margin-right: 0.5rem;
       margin-left: 0;
       margin-bottom: 0;
       display: inline-block;
     }
+  }
+  &__blue {
+     color: $mainBlue;
   }
 }
